# circuits-clash

./: .gitignore  cabal.project  circuits-clash.cabal  readme.md
examples/: MacCircuit.hs  MealyTraceExample.hs
src/Circuit/: Clash.hs
src/Circuit/Clash/: MealyTrace.hs
